# django_project

./: .gitignore  Dockerfile  README.md  db.sqlite3  docker-compose.yml  pyproject.toml
core/: consumers.py  signals.py  tasks.py  views.py
notifications/: apps.py  consumers.py  signals.py  tasks.py
project/: asgi.py  celery.py  settings.py  urls.py
templates/core/: base.html  home.html
templates/core/partials/: _sidebar.html
templates/todo/: todo_confirm_delete.html  todo_form.html  todo_list.html
todo/: admin.py  models.py  urls.py  views.py
todo/migrations/: 0001_initial.py
